WAC-60 Fix title and search box to not overlap when width <= 407px

--- a/ckanext/who_afro/assets/css/who-afro.css
+++ b/ckanext/who_afro/assets/css/who-afro.css
@@ -1701,3 +1701,9 @@ p.learn-more a {
     }
 }
 
+@media only screen and (max-width: 407px) {
+    .mobile-menu .search-form {
+        margin-top: 83px;
+    }
+}
+
